plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

version = mod_version
group = mod_group_id

def mavenUrl = System.getenv("MAVEN_URL")
def mavenUser = System.getenv("MAVEN_USERNAME")
def mavenPass = System.getenv("MAVEN_TOKEN")
def mc_version = "neoforge_${minecraft_version}"

repositories {
    mavenLocal()

    maven {
        url = "https://cursemaven.com"
        content { includeGroup "curse.maven" }
    }

    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

    maven {
        name = "Modrinth Maven"
        url = "https://api.modrinth.com/maven"
    }

    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }

    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup("software.bernie.geckolib")
            includeGroup("com.geckolib")
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()
            gameDirectory = file('run/client')
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        c1 {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            gameDirectory = file('run/c1')
            programArguments.addAll '--username', 'TestPlayer1'
        }

        c2 {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            gameDirectory = file('run/c2')
            programArguments.addAll '--username', 'TestPlayer2'
        }

        modded {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            gameDirectory = file('run/modded')
            programArguments.addAll '--username', 'Gac'
        }

        server {
            server()
            gameDirectory = file('run/server')
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    jar {
        archiveBaseName.set(mod_id)
        archiveVersion.set(version)
        archiveFileName.set("${mod_id}-${mc_version}-${mod_version}.jar")
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    localRuntime
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // JEI
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // EMI (not yet available for 26.1.2)
    //compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
    //localRuntime "dev.emi:emi-neoforge:${emi_version}"

    // Jade
    localRuntime "maven.modrinth:jade:26.1.1+neoforge"
    compileOnly "curse.maven:jade-324717:8068368"

    // GeckoLib
    implementation "com.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"

    // FTB Chunks, FTB Library, FTB Teams
    localRuntime "curse.maven:ftb-chunks-forge-314906:7972586"
    localRuntime "curse.maven:ftb-library-forge-404465:7971743"
    compileOnly "curse.maven:ftb-teams-forge-404468:7972096"
    localRuntime "curse.maven:ftb-teams-forge-404468:7972096"
    localRuntime "curse.maven:ftb-ranks-314905:7921450"
    localRuntime "curse.maven:ftb-ultimine-386134:7965974"

    // GuidME
    compileOnly "org.appliedenergistics:guideme:26.1.12-beta:api"
    localRuntime "org.appliedenergistics:guideme:26.1.12-beta"

    // AE2
    compileOnly "org.appliedenergistics:appliedenergistics2:26.1.9-alpha:api"
    localRuntime "org.appliedenergistics:appliedenergistics2:26.1.9-alpha"

    // Pipez
    localRuntime "curse.maven:pipez-443900:8053422"

    // Construction sticks
    localRuntime "curse.maven:cs-1156098:8049310"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
            artifactId = "${mod_id}-${mc_version}"
        }
    }

    repositories {
        if (mavenUrl && mavenUser && mavenPass) {
            maven {
                url = uri(mavenUrl)
                credentials {
                    username = mavenUser
                    password = mavenPass
                }
            }
        }
    }
}

tasks.named("publish") {
    doFirst {
        println ">>> Running publish task!"
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
